fixed a bug about text overflow

--- a/app/src/asset/css/App.css
+++ b/app/src/asset/css/App.css
@@ -114,14 +114,6 @@
     margin: 0 auto;
 }
 
-.comment-input-box{
-    margin: 10px auto;
-    display: block;
-    height: 100px;
-    width: 80%;
-    resize: none;
-    border: 1px solid #4b61e9;
-}
 .comment-button{
     margin: 4px auto;
     padding: 10px 20px;
@@ -136,4 +128,8 @@
 
 .comment-submit-button{
     margin: 10px;
+}
+
+.word-break{
+    word-break:break-all;
 }
